--- a/python/240706/02_sales.ipynb
+++ b/python/240706/02_sales.ipynb
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "Afghanistan  22977020.06"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
        "[185 rows x 1 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,6 +899,657 @@
    "source": [
     "# gorup_data에서 sum을 기준으로 내림차순 정렬 \n",
     "group_data.sort_values(['총이윤'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대륙</th>\n",
+       "      <th>국가</th>\n",
+       "      <th>상품종류</th>\n",
+       "      <th>채널</th>\n",
+       "      <th>주문일자</th>\n",
+       "      <th>발송일자</th>\n",
+       "      <th>판매개수</th>\n",
+       "      <th>단가</th>\n",
+       "      <th>원가</th>\n",
+       "      <th>총단가</th>\n",
+       "      <th>총원가</th>\n",
+       "      <th>총이윤</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Household</td>\n",
+       "      <td>Offline</td>\n",
+       "      <td>6/3/2013</td>\n",
+       "      <td>7/20/2013</td>\n",
+       "      <td>9350</td>\n",
+       "      <td>668.27</td>\n",
+       "      <td>502.54</td>\n",
+       "      <td>6248324.50</td>\n",
+       "      <td>4698749.00</td>\n",
+       "      <td>1549575.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Vegetables</td>\n",
+       "      <td>Offline</td>\n",
+       "      <td>9/18/2013</td>\n",
+       "      <td>10/9/2013</td>\n",
+       "      <td>7507</td>\n",
+       "      <td>154.06</td>\n",
+       "      <td>90.93</td>\n",
+       "      <td>1156528.42</td>\n",
+       "      <td>682611.51</td>\n",
+       "      <td>473916.91</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     대륙          국가        상품종류       채널       주문일자       발송일자  판매개수      단가  \\\n",
+       "0  Asia  Bangladesh   Household  Offline   6/3/2013  7/20/2013  9350  668.27   \n",
+       "1  Asia  Bangladesh  Vegetables  Offline  9/18/2013  10/9/2013  7507  154.06   \n",
+       "\n",
+       "       원가         총단가         총원가         총이윤  \n",
+       "0  502.54  6248324.50  4698749.00  1549575.50  \n",
+       "1   90.93  1156528.42   682611.51   473916.91  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 그룹화 연산을 2개 이상 사용시 \n",
+    "group_data2 = sales[['국가', '총이윤']].groupby(['국가']).agg(['sum', 'mean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">총이윤</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>국가</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>South Korea</th>\n",
+       "      <td>23893933.75</td>\n",
+       "      <td>398232.229167</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     총이윤               \n",
+       "                     sum           mean\n",
+       "국가                                     \n",
+       "South Korea  23893933.75  398232.229167"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# group_data2에서 국가가 South Korea인 총 이윤의 합계값을 출력 \n",
+    "group_data2.loc['South Korea', ('총이윤', 'sum')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23893933.75"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data2['총이윤']['sum']['South Korea']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">총이윤</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>국가</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Brunei</th>\n",
+       "      <td>21198560.2</td>\n",
+       "      <td>451033.195745</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               총이윤               \n",
+       "               sum           mean\n",
+       "국가                               \n",
+       "Brunei  21198560.2  451033.195745"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data2.iloc[[20]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 데이터프레임의 재구조화\n",
+    "- pivot_table()\n",
+    "    - 기존의 데이터프레임의 데이터들을 기준으로 새로운 데이터프레임을 생성 \n",
+    "    - 인덱스와 컬럼, 사용할 데이터을 데이터프레임에서 선택하여 구조를 새로 만든다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.pivot_table(\n",
+    "    sales, \n",
+    "    index = ['대륙', '국가'], \n",
+    "    columns= '채널',\n",
+    "    values = '총이윤', \n",
+    "    aggfunc= ['sum', 'mean']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# groupby()에서 그룹화된 데이터프레임을 출력 \n",
+    "group_data3 = sales[['대륙', '총이윤']].groupby('대륙')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대륙</th>\n",
+       "      <th>총이윤</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1549575.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>473916.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>78353.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>462084.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>50500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1464</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>39845.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1465</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>872805.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1466</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>72415.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1467</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>507364.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1468</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>330387.20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1469 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        대륙         총이윤\n",
+       "0     Asia  1549575.50\n",
+       "1     Asia   473916.91\n",
+       "2     Asia    78353.94\n",
+       "3     Asia   462084.48\n",
+       "4     Asia    50500.00\n",
+       "...    ...         ...\n",
+       "1464  Asia    39845.40\n",
+       "1465  Asia   872805.30\n",
+       "1466  Asia    72415.20\n",
+       "1467  Asia   507364.00\n",
+       "1468  Asia   330387.20\n",
+       "\n",
+       "[1469 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data3.get_group('Asia')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_data4 = sales[['국가', '총이윤']].groupby('국가').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_data4.sort_values('총이윤', ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_data4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grenada'"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data4.iloc[2].name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47\n",
+      "184\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 반복문을 이용하여 South Korea의 위치 찾기 \n",
+    "# 국가는 index로 되어있다 \n",
+    "for i in range(0, len(group_data4), 1):\n",
+    "    # 만약에 group_data4.iloc[i]의 name이 South Korea 라면?\n",
+    "    if group_data4.iloc[i].name == 'South Korea':\n",
+    "        print(i)\n",
+    "        # break\n",
+    "\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "\n",
+    "while True:\n",
+    "    try : \n",
+    "        if group_data4.iloc[i].name == 'South Korea':\n",
+    "            print(i)\n",
+    "            break\n",
+    "        i += 1\n",
+    "    except:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame에 index는 list형태\n",
+    "index_list = list(group_data4.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_list.index('South Korea')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_data4.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국가</th>\n",
+       "      <th>총이윤</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>23893933.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             국가          총이윤\n",
+       "47  South Korea  23893933.75"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data4.loc[\n",
+    "    group_data4['국가'] == 'South Korea'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_data5 = sales[['국가', '총이윤']].groupby('국가').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 특정 컬럼을 기준으로 랭킹을 잡아주는 함수\n",
+    "# rank()\n",
+    "group_data5['rank'] = group_data5['총이윤'].rank(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "총이윤     23893933.75\n",
+       "rank          48.00\n",
+       "Name: South Korea, dtype: float64"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data5.loc['South Korea']"
    ]
   },
   {
