--- a/python/240713/03_card.ipynb
+++ b/python/240713/03_card.ipynb
@@ -73,23 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "성별\n",
-       "2    1336\n",
-       "1    1312\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 성별 데이터의 빈도수를 확인 \n",
     "offline['성별'].value_counts()"
@@ -97,32 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "연령대\n",
-       "10    264\n",
-       "20    264\n",
-       "30    264\n",
-       "40    264\n",
-       "50    264\n",
-       "60    264\n",
-       "70    264\n",
-       "80    264\n",
-       "90    264\n",
-       "0     233\n",
-       "1      39\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 연령대 데이터의 빈도수를 확인 \n",
     "offline['연령대'].value_counts()"
@@ -134,8 +97,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 기준년월 데이터를 시계열 데이터로 변경 \n"
+    "# 기준년월 데이터를 시계열 데이터로 변경 \n",
+    "offline['기준년월'] = pd.to_datetime(offline['기준년월'], format='%Y%m')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offline.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 건당 이용금액 파생변수를 생성 \n",
+    "# (총이용금액 / 총이용건수) -> 소수점 2자리까지 유지하고 반올림\n",
+    "offline['건당이용금액'] = round(\n",
+    "    offline['총이용금액'] / offline['총이용건수'] ,\n",
+    "    2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 기준년 파생 변수 생성 \n",
+    "# 기준년월 데이터에서 년도만 따로 추출하여 문자 형태로 데이터 대입\n",
+    "offline['기준년월'].dt.strftime('%Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2019'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 시계열 데이터에서 strftime 함수를 이용\n",
+    "offline.loc[0, '기준년월'].strftime('%Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2019"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "offline.loc[0,'기준년월'].year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offline['기준년'] = offline['기준년월'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offline.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
