--- a/python/240803/01_crawlling.ipynb
+++ b/python/240803/01_crawlling.ipynb
@@ -657,6 +657,306 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# table1에서 tbody부분 데이터를 출력\n",
+    "tbody_data = table1.find('tbody')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tbody_data에서 tr들을 모두 출력 \n",
+    "tr_list = tbody_data.find_all('tr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tr_list에서 첫번째 tr만 추출\n",
+    "tr_data = tr_list[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tr_data에서 th태그, td태그를 출력\n",
+    "th_list = tr_data.find_all('th')\n",
+    "td_list = tr_data.find_all('td')\n",
+    "value_data = th_list + td_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['KODEX 200선물인버스2X', '2,075', '상승 158', '+8.24%']"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ value.get_text().strip() for value in value_data ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\t\\t\\t\\t+8.24%\\n\\t\\t\\t\\t'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "td_list[2].find('em').string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 위의 value 작업들을 반복 실행 \n",
+    "# tr_list의 개수만큼\n",
+    "values = []\n",
+    "for tr_data in tr_list:\n",
+    "    # tr_data에서 th태그, td태그를 출력\n",
+    "    th_list = tr_data.find_all('th')\n",
+    "    td_list = tr_data.find_all('td')\n",
+    "    value_data = th_list + td_list\n",
+    "    val = [ value.get_text().strip() for value in value_data ]\n",
+    "    values.append(val)\n",
+    "values\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cols, values를 이용하여 DataFrame 생성\n",
+    "df = pd.DataFrame(values, columns=cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>현재가</th>\n",
+       "      <th>전일대비</th>\n",
+       "      <th>등락률</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KODEX 200선물인버스2X</td>\n",
+       "      <td>2,075</td>\n",
+       "      <td>상승 158</td>\n",
+       "      <td>+8.24%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>랩지노믹스</td>\n",
+       "      <td>3,080</td>\n",
+       "      <td>상승 410</td>\n",
+       "      <td>+15.36%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>흥아해운</td>\n",
+       "      <td>2,800</td>\n",
+       "      <td>상승 150</td>\n",
+       "      <td>+5.66%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>한국ANKOR유전</td>\n",
+       "      <td>467</td>\n",
+       "      <td>상승 27</td>\n",
+       "      <td>+6.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>휴마시스</td>\n",
+       "      <td>1,846</td>\n",
+       "      <td>상승 96</td>\n",
+       "      <td>+5.49%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KODEX 코스닥150선물인버스</td>\n",
+       "      <td>3,745</td>\n",
+       "      <td>상승 165</td>\n",
+       "      <td>+4.61%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>KODEX 레버리지</td>\n",
+       "      <td>18,845</td>\n",
+       "      <td>하락 1,645</td>\n",
+       "      <td>-8.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>KODEX 코스닥150레버리지</td>\n",
+       "      <td>9,530</td>\n",
+       "      <td>하락 900</td>\n",
+       "      <td>-8.63%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>삼성 인버스 2X WTI원유 선물 ETN</td>\n",
+       "      <td>93</td>\n",
+       "      <td>상승 4</td>\n",
+       "      <td>+4.49%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>79,600</td>\n",
+       "      <td>하락 3,500</td>\n",
+       "      <td>-4.21%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>셀리드</td>\n",
+       "      <td>5,640</td>\n",
+       "      <td>상승 910</td>\n",
+       "      <td>+19.24%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>오성첨단소재</td>\n",
+       "      <td>2,495</td>\n",
+       "      <td>상승 35</td>\n",
+       "      <td>+1.42%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>대한해운</td>\n",
+       "      <td>2,140</td>\n",
+       "      <td>하락 115</td>\n",
+       "      <td>-5.10%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>KODEX 인버스</td>\n",
+       "      <td>4,225</td>\n",
+       "      <td>상승 165</td>\n",
+       "      <td>+4.06%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>엘컴텍</td>\n",
+       "      <td>1,334</td>\n",
+       "      <td>상승 123</td>\n",
+       "      <td>+10.16%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       종목명     현재가      전일대비      등락률\n",
+       "0         KODEX 200선물인버스2X   2,075    상승 158   +8.24%\n",
+       "1                    랩지노믹스   3,080    상승 410  +15.36%\n",
+       "2                     흥아해운   2,800    상승 150   +5.66%\n",
+       "3                한국ANKOR유전     467     상승 27   +6.14%\n",
+       "4                     휴마시스   1,846     상승 96   +5.49%\n",
+       "5        KODEX 코스닥150선물인버스   3,745    상승 165   +4.61%\n",
+       "6               KODEX 레버리지  18,845  하락 1,645   -8.03%\n",
+       "7         KODEX 코스닥150레버리지   9,530    하락 900   -8.63%\n",
+       "8   삼성 인버스 2X WTI원유 선물 ETN      93      상승 4   +4.49%\n",
+       "9                     삼성전자  79,600  하락 3,500   -4.21%\n",
+       "10                     셀리드   5,640    상승 910  +19.24%\n",
+       "11                  오성첨단소재   2,495     상승 35   +1.42%\n",
+       "12                    대한해운   2,140    하락 115   -5.10%\n",
+       "13               KODEX 인버스   4,225    상승 165   +4.06%\n",
+       "14                     엘컴텍   1,334    상승 123  +10.16%"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
