--- a/python/240803/01_crawlling.ipynb
+++ b/python/240803/01_crawlling.ipynb
@@ -957,10 +957,318 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "10\n",
+      "2\n",
+      "20\n",
+      "3\n",
+      "30\n",
+      "4\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 반복문 이용시 2개의 리스트와 2개의 변수 값을 사용\n",
+    "\n",
+    "x_list = [1,2,3,4]\n",
+    "y_list = [10, 20, 30, 40]\n",
+    "\n",
+    "\n",
+    "# for i in range(len(x_list)):\n",
+    "#     print(x_list[i])\n",
+    "#     print(y_list[i])\n",
+    "\n",
+    "for x, y in zip(x_list, y_list):\n",
+    "    print(x)\n",
+    "    print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install lxml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\EZEN\\AppData\\Local\\Temp\\ipykernel_7404\\3835114820.py:3: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  dfs = pd.read_html(str(section_data))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 판다스의 기능을 이용해서 크롤링\n",
+    "# read_html() : html태그에서 table태그를 선택하여 데이터프레임으로 변환\n",
+    "dfs = pd.read_html(str(section_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>현재가</th>\n",
+       "      <th>전일대비</th>\n",
+       "      <th>등락률</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KODEX 200선물인버스2X</td>\n",
+       "      <td>2075</td>\n",
+       "      <td>상승 158</td>\n",
+       "      <td>+8.24%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>랩지노믹스</td>\n",
+       "      <td>3080</td>\n",
+       "      <td>상승 410</td>\n",
+       "      <td>+15.36%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>흥아해운</td>\n",
+       "      <td>2800</td>\n",
+       "      <td>상승 150</td>\n",
+       "      <td>+5.66%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>한국ANKOR유전</td>\n",
+       "      <td>467</td>\n",
+       "      <td>상승 27</td>\n",
+       "      <td>+6.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>휴마시스</td>\n",
+       "      <td>1846</td>\n",
+       "      <td>상승 96</td>\n",
+       "      <td>+5.49%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KODEX 코스닥150선물인버스</td>\n",
+       "      <td>3745</td>\n",
+       "      <td>상승 165</td>\n",
+       "      <td>+4.61%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>KODEX 레버리지</td>\n",
+       "      <td>18845</td>\n",
+       "      <td>하락 1,645</td>\n",
+       "      <td>-8.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>KODEX 코스닥150레버리지</td>\n",
+       "      <td>9530</td>\n",
+       "      <td>하락 900</td>\n",
+       "      <td>-8.63%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>삼성 인버스 2X WTI원유 선물 ETN</td>\n",
+       "      <td>93</td>\n",
+       "      <td>상승 4</td>\n",
+       "      <td>+4.49%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>79600</td>\n",
+       "      <td>하락 3,500</td>\n",
+       "      <td>-4.21%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>셀리드</td>\n",
+       "      <td>5640</td>\n",
+       "      <td>상승 910</td>\n",
+       "      <td>+19.24%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>오성첨단소재</td>\n",
+       "      <td>2495</td>\n",
+       "      <td>상승 35</td>\n",
+       "      <td>+1.42%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>대한해운</td>\n",
+       "      <td>2140</td>\n",
+       "      <td>하락 115</td>\n",
+       "      <td>-5.10%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>KODEX 인버스</td>\n",
+       "      <td>4225</td>\n",
+       "      <td>상승 165</td>\n",
+       "      <td>+4.06%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>엘컴텍</td>\n",
+       "      <td>1334</td>\n",
+       "      <td>상승 123</td>\n",
+       "      <td>+10.16%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       종목명    현재가      전일대비      등락률\n",
+       "0         KODEX 200선물인버스2X   2075    상승 158   +8.24%\n",
+       "1                    랩지노믹스   3080    상승 410  +15.36%\n",
+       "2                     흥아해운   2800    상승 150   +5.66%\n",
+       "3                한국ANKOR유전    467     상승 27   +6.14%\n",
+       "4                     휴마시스   1846     상승 96   +5.49%\n",
+       "5        KODEX 코스닥150선물인버스   3745    상승 165   +4.61%\n",
+       "6               KODEX 레버리지  18845  하락 1,645   -8.03%\n",
+       "7         KODEX 코스닥150레버리지   9530    하락 900   -8.63%\n",
+       "8   삼성 인버스 2X WTI원유 선물 ETN     93      상승 4   +4.49%\n",
+       "9                     삼성전자  79600  하락 3,500   -4.21%\n",
+       "10                     셀리드   5640    상승 910  +19.24%\n",
+       "11                  오성첨단소재   2495     상승 35   +1.42%\n",
+       "12                    대한해운   2140    하락 115   -5.10%\n",
+       "13               KODEX 인버스   4225    상승 165   +4.06%\n",
+       "14                     엘컴텍   1334    상승 123  +10.16%"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sqlalchemy\n",
+      "  Downloading SQLAlchemy-2.0.31-cp39-cp39-win_amd64.whl (2.1 MB)\n",
+      "Collecting greenlet!=0.4.17\n",
+      "  Downloading greenlet-3.0.3-cp39-cp39-win_amd64.whl (290 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\users\\ezen\\appdata\\roaming\\python\\python39\\site-packages (from sqlalchemy) (4.12.2)\n",
+      "Installing collected packages: greenlet, sqlalchemy\n",
+      "Successfully installed greenlet-3.0.3 sqlalchemy-2.0.31\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.1.3; however, version 24.2 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\ezen\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sqlalchemy 라이브러리 안에 있는 create_engine 기능을 로드 \n",
+    "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 서버의 정보를 저장\n",
+    "user = 'root'\n",
+    "password = '1234'\n",
+    "host = 'localhost'\n",
+    "port = 3306\n",
+    "database = 'ezen'\n",
+    "# sqlalchemy를 이용하여 데이터베이스 서버와 연결 \n",
+    "connection_url = f'mysql+pymysql://{user}:{password}@{host}:{port}/{database}'\n",
+    "engine = create_engine(connection_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dfs에 있는 첫번째 데이터프레임을 데이터베이스에 대입 \n",
+    "# to_sql( 테이블명, con = 데이터베이스정보, index = 인덱스저장유무 , if_exists = 'replace' | 'append')\n",
+    "dfs[0].to_sql('trade_top', con=engine, index=False, if_exists='append')"
+   ]
   }
  ],
  "metadata": {
