--- a/python/240803/02_selenium.ipynb
+++ b/python/240803/02_selenium.ipynb
@@ -299,10 +299,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# driver에서 스크롤 가장 하단으로 내린다. \n",
+    "try : \n",
+    "    last_scroll = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "\n",
+    "    # 반복문 사용 (반복 횟수가 불분명할때)\n",
+    "    while True:\n",
+    "        # 스크롤을 가장 마지막으로 이동 \n",
+    "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "        # 잠시 대기하는 코드 \n",
+    "        time.sleep(2)\n",
+    "\n",
+    "        # 스크롤을 내린뒤 다시한번 화면의 높이를 측정 \n",
+    "        new_scroll = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "\n",
+    "        # last_scroll과 new_scroll 비교\n",
+    "        if new_scroll == last_scroll:\n",
+    "            # 반복문을 종료\n",
+    "            break\n",
+    "        else:\n",
+    "            last_scroll = new_scroll\n",
+    "except Exception as e:\n",
+    "    print(\"Error code:\", e)"
+   ]
   }
  ],
  "metadata": {
